# gl-playground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  sea-ice-extent-annually.csv  sea-ice-extent.csv
shaders/: axis.frag  axis.vert  expansion_active.vert  expansion_handle.vert  graph.tesc  graph.vert  polyline.frag  polyline.tese  polyline.vert  selection_rect.vert  simple.vert  timeseries.tesc  timeseries.tese  timeseries.vert  timeseriesmiddle.vert
src/: application.cpp  application.hpp  axisDrag.cpp  axisDrag.hpp  boxSelect.cpp  boxSelect.hpp  expansionActive.cpp  expansionActive.hpp  expansionHandles.cpp  expansionHandles.hpp  expansionMiddle.cpp  expansionMiddle.hpp  graph.cpp  graphApp.cpp  graphApp.hpp  structs.hpp  timeSeries.cpp  timeSeries.hpp  tool.cpp  tool.hpp  triangle.cpp  utils.hpp
src/gl/: program.cpp  program.hpp  shader.cpp  shader.hpp
